# openclaw-pocket-server

./: .editorconfig  .gitattributes  .gitignore  .graphify_analysis.json  .graphify_ast.json  .graphify_detect.json  .markdownlint-cli2.yaml  CLD-HANDOFF.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SOURCES.md  bootstrap.sh  create-release.bat  install-tools.sh  install.sh  mint.json  oca.sh  style.css  uninstall.sh  update-core.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
RELEASES/: 01.04.2026.md  10.03.2026.md
assistant-sdk/: package.json
docs/: ADB-BRIDGE.md  TECHNICAL_DOCS.md  ai-cli-tools.mdx  architecture.mdx  comparison.mdx  configuration.mdx  disable-phantom-process-killer.mdx  faq.mdx  free-models.mdx  installation.mdx  introduction.mdx  local-llm.mdx  phantom-process-killer.mdx  quickstart.mdx  root-support.mdx  ssh-guide.mdx  termux-boot.mdx  troubleshooting.mdx  why-android.mdx
graphify-out/: .chunk_1_files.txt  .chunk_2_files.txt  .chunk_3_files.txt  .chunk_4_files.txt  .graphify_chunk_1.json  .graphify_chunk_2.json  .graphify_chunk_3.json  .graphify_chunk_4.json  .graphify_extract.json  .graphify_python  .graphify_semantic_new.json  GRAPH_REPORT.md  (+2 more)
skills/android-automation/: .env.example  .gitignore  CLAUDE.md  OpenClaw_Android_Learnings.md  README.md  SKILL.md  android-automation-agent-ONBOARDING.md  check.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.sh
skills/android-automation/android_agent/: __init__.py  openrouter.py
skills/android-automation/android_agent/executor/: android.py
skills/android-automation/android_agent/graph/: config.py  runner.py  state.py
skills/android-automation/android_agent/graph/nodes/: contextor.py  convergence.py  cortex.py  executor.py  orchestrator.py  planner.py  summarizer.py
skills/android-automation/android_agent/utils/: check.py  telegram.py
skills/android-automation/scripts/: check_busy.sh  kill_monitors.sh  monitor_progress.sh  monitor_result.sh  wake_and_unlock.sh
skills/android-automation/tests/: test_android.py
(+67 files in other folders)
